package iuh.strategy;

public interface TaxStrategy {

    double calculate(double price);

}